hub/templates/egressproxy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-network-policy
spec:
  podSelector:
    matchLabels:
      app: egress-proxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: singleuser-server
          app: jupyterhub
    ports:
    - protocol: TCP
      port: 443
